--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -11,43 +11,43 @@
           <div class="row">
             <div class="col-md-3">
               <h5 class=""><a href=""><img src="{% static 'me/KCCS-TECH-BOT.png' %}" width="212px" height="113px" alt="KCCS TECH Logo"></a></h5>
-              <p class="" style="color: #FDFEFE !important;">Leading technology and solutions to your doorsteps.</p>
-              <p class="" style="color: #FDFEFE !important;"><i class="fas fa-clock"></i> Business hours: Mon-Sun 9 A.M-9 P.M</p>
-              <p class="" style="color: #FDFEFE !important;"><i class="fas fa-phone"></i> Phone No. 646-975-9555 | Email: support@kccstech.com</p>
-              <p class="" style="color: #FDFEFE !important;">Connect With Us <a style="margin-left:15px;" href="https://www.facebook.com/kccstech/"><i class="fab fa-facebook"></i></a><a style="margin-left:15px; color:#1dcaff;" href="https://twitter.com/kccstechco"><i class="fab fa-twitter"></i></a><a style="margin-left:15px; color:#FF0000;" href="https://www.youtube.com/channel/UCmHMyRkl3X6hUC46Gj3BTMg?view_as=subscriber"><i class="fab fa-youtube"></i></a></p>
+              <p class="" style="color: #FDFEFE;">Leading technology and solutions to your doorsteps.</p>
+              <p class="" style="color: #FDFEFE;"><i class="fas fa-clock"></i> Business hours: Mon-Sun 9 A.M-9 P.M</p>
+              <p class="" style="color: #FDFEFE;"><i class="fas fa-phone"></i> Phone No. 646-975-9555 | Email: support@kccstech.com</p>
+              <p class="" style="color: #FDFEFE;">Connect With Us <a style="margin-left:15px;" href="https://www.facebook.com/kccstech/"><i class="fab fa-facebook"></i></a><a style="margin-left:15px; color:#1dcaff;" href="https://twitter.com/kccstechco"><i class="fab fa-twitter"></i></a><a style="margin-left:15px; color:#FF0000;" href="https://www.youtube.com/channel/UCmHMyRkl3X6hUC46Gj3BTMg?view_as=subscriber"><i class="fab fa-youtube"></i></a></p>
             </div>
             <div class="col-md-3">
               <h1 class="" style="color: #FDFEFE !important;"><b>Quick Access</b></h1>
               <div class="row">
                 <ul class="links bullet-me">
-                    <li><a href="" style="color: #FDFEFE !important;">Contact Us</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">RMA Process</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">FAQ</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">LCD Buyback</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">Other Services</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Contact Us</a></li>
+                    <li><a href="" style="color: #FDFEFE;">RMA Process</a></li>
+                    <li><a href="" style="color: #FDFEFE;">FAQ</a></li>
+                    <li><a href="" style="color: #FDFEFE;">LCD Buyback</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Other Services</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-md-3">
-              <h1 class="" style="color: #FDFEFE !important;"><b>My Account</b></h1>
+              <h1 class="" style="color: #FDFEFE;"><b>My Account</b></h1>
               <div class="row">
                   <ul class="links bullet-me">
-                    <li><a href="" style="color: #FDFEFE !important;">Order History</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">My Account</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;"></a></li>
-                    <li><a href="" style="color: #FDFEFE !important;"></a></li>
+                    <li><a href="" style="color: #FDFEFE;">Order History</a></li>
+                    <li><a href="" style="color: #FDFEFE;">My Account</a></li>
+                    <li><a href="" style="color: #FDFEFE;"></a></li>
+                    <li><a href="" style="color: #FDFEFE;"></a></li>
                 </ul>
               </div>
             </div>
             <div class="col-md-3">
-              <h1 class="" style="color: #FDFEFE !important;"><b>Policies</b></h1>
+              <h1 class="" style="color: #FDFEFE;"><b>Policies</b></h1>
               <div class="row">
                   <ul class="links bullet-me">
-                    <li><a href="" style="color: #FDFEFE !important;">Privacy Policy</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">Trademark Disclaimer</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">Warranty Policy</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">Terms & Conditions</a></li>
-                    <li><a href="" style="color: #FDFEFE !important;">Shipping & Returns Policy</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Privacy Policy</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Trademark Disclaimer</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Warranty Policy</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Terms & Conditions</a></li>
+                    <li><a href="" style="color: #FDFEFE;">Shipping & Returns Policy</a></li>
                 </ul>
               </div>
             </div>
