--- a/templates/partials/nav_accounts.html
+++ b/templates/partials/nav_accounts.html
@@ -14,7 +14,7 @@
                     {% csrf_token %}
                     <input name="next" type="hidden" value="{{ language_neutral_url_path }}" />
                     <div class"">
-                        <select name="language" class="dropdown-me" style="color:#FDFEFE">
+                        <select name="language" class="dropdown-me">
                             {% get_language_info_list for LANGUAGES as languages %}
                             {% for language in languages %}
                                 <option value="{{ language.code }}"{% if language.code == LANGUAGE_CODE%} selected="selected"{% endif %}>
@@ -30,7 +30,7 @@
             {% endblock %}
         </div>
         <div class="flex-grow-me-md center-flex-me gold-me">
-            <div class="list-me"><a style="color:#FDFEFE">Business hours: Mon-Sun 9 A.M-9 P.M - Remote support is 24/7</a></div>
+            <div class="list-me"><a style="color:#FDFEFE">Business hours: Mon-Sun 9 A.M-9 P.M</a></div>
         </div>
         <div class="flex-grow-me-md right-flex-me gold-me">
                 <div><a style="color: white;">Phone No. 646-975-9555</a></div>
