--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -55,8 +55,8 @@
           </div>
           <div class="footer-copyright text-center py-1">
             <hr style="background-color:#888d90;">
-            <p class="text-center" style="color:#FDFEFE">All trademarks are properties of their respective holders. KccsTech is a third party replacement part wholesaler and does not own or make claim to the trademarks on this website.</p>
-            <p class="text-center" style="color:#FDFEFE">Copyright &copy; KccsTech 2018 All Rights Reserved | Template Design & Development by <a href="" style="color:#1dcaff">KccsTech</a></p>
+            <p class="text-center" style="color:#FDFEFE">All trademarks are properties of their respective holders. Kccs Tech Inc is a third party replacement part wholesaler and does not own or make claim to the trademarks on this website.</p>
+            <p class="text-center" style="color:#FDFEFE">Copyright &copy; Kccs Tech Inc 2018 All Rights Reserved | Template Design & Development by <a href="" style="color:#1dcaff">KccsTech</a></p>
 
           </div>
         </div>
