--- a/templates/checkout/payment_details.html
+++ b/templates/checkout/payment_details.html
@@ -2,6 +2,10 @@
 {% load currency_filters %}
 {% load i18n %}
 
+{% block checkout_nav %}
+    {% include 'checkout/nav.html' with step=4 %}
+{% endblock %}
+
 {% block payment_details %}
     <div class="well">
         <div class="sub-header">
@@ -43,7 +47,6 @@
             <div class="form-actions">
                 <button type="submit" class="btn btn-large btn-primary">{% trans "Continue" %}</button>
             </div>
-        </form>
 
     </div>
 
