--- a/templates/layout_2_col.html
+++ b/templates/layout_2_col.html
@@ -14,7 +14,6 @@ main content area to split it into a sidebar and a content block
     <div class="page_inner">
         {% block breadcrumbs %}{% endblock %}
         <div class="row">
-
             <div class="col-sm-8 col-md-9">
                 {% block header %}
                 <div class="page-header action">
@@ -31,41 +30,28 @@ main content area to split it into a sidebar and a content block
                 </div>
                 {% block content %}{% endblock %}
             </div>
+            <style>
+                .list-group .list-group-item a#link1 {
+                    padding-left: 15px;
+                }
+                .list-group .list-group-item a#link2 {
+                    padding-left: 30px;
+                }
+            </style>
 
             <aside class="sidebar col-sm-4 col-md-3">
-                {% category_tree as tree_categories %}
-    {% if tree_categories %}
-        <h4>{% trans "Show results for" %}</h4>
-        <div class="list-group panel" id="MainMenu">
-            <ul class="list-group-item list-group-item-success">
-                {% for tree_category, info in tree_categories %}
-                    <li>
-                        <a href="{{ tree_category.get_absolute_url }}">
-                            {% if tree_category.pk == category.pk %}
-                                <strong>{{ tree_category.name }}</strong>
-                            {% else %}
-                                {{ tree_category.name }}
+                {# Sidebar template #}
+                {% include "partials/sidebar.html" %}
+                {% if has_facets %}
+                    <h4>{% trans "Refine by" %}</h4>
+                    <div class="side_categories">
+                        {% for field, data in facet_data.items %}
+                            {% if data.results %}
+                                {% include 'search/partials/facet.html' with name=data.name items=data.results %}
                             {% endif %}
-                        </a>
-
-                        {% if info.has_children %}<ul>{% else %}</li>{% endif %}
-                        {% for n in info.num_to_close %}
-                            </ul></li>
                         {% endfor %}
-                {% endfor %}
-            </ul>
-        </div>
-    {% endif %}
-    {% if has_facets %}
-        <h4>{% trans "Refine by" %}</h4>
-        <div class="side_categories">
-            {% for field, data in facet_data.items %}
-                {% if data.results %}
-                    {% include 'search/partials/facet.html' with name=data.name items=data.results %}
+                    </div>
                 {% endif %}
-            {% endfor %}
-        </div>
-    {% endif %}
                 <div id="promotions_left">
                     {% block column_left %}{% endblock %}
                     {% for promotion in promotions_left %}
